[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substring_replace"
version = "0.1.0"
description = "Script that removes substring from all file names within a directory."
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.scripts]
substring-replace=substring_replace:main
